--- a/src/copy/package.json
+++ b/src/copy/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "swiper",
-  "version": "9.2.4",
+  "name": "@duyank/swiper",
+  "version": "0.1.1",
   "description": "Most modern mobile touch slider and framework with hardware accelerated transitions",
   "typings": "swiper.d.ts",
   "type": "module",
